--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,42 +1,13 @@
-apply plugin: 'com.android.library'
-apply plugin: 'com.github.dcendents.android-maven'
-apply plugin: "com.jfrog.bintray"
-
-ext {
-    bintrayRepo = 'maven'
-    bintrayName = 'myfinancesplugin'   // Has to be same as your library module name
-
-    publishedGroupId = 'cicero.minhasfinancas'
-    libraryName = 'MyFinancesPlugin'
-    artifact = 'myfinancesplugin'     // Has to be same as your library module name
-
-    libraryDescription = 'Android Library to integrate with My Finances Official app available on Google Play Store'
-
-    // Your github repo link
-    siteUrl = 'https://github.com/ciceromsjr/myfinancesplugin'
-    gitUrl = 'https://github.com/ciceromsjr/myfinancesplugin.git'
-    githubRepository= 'ciceromsjr/myfinancesplugin'
-
-    libraryVersion = '1.0'
-
-    developerId = 'ciceromsjr'
-    developerName = 'Cícero Moura'
-    developerEmail = 'ciceromoura13@gmail.com'
-
-    licenseName = 'The Apache Software License, Version 2.0'
-    licenseUrl = 'http://www.apache.org/licenses/LICENSE-2.0.txt'
-    allLicenses = ["Apache-2.0"]
-}
-
-version = "1.0"
+apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 26
     defaultConfig {
+        applicationId "cicero.minhasfinancas.plugin"
         minSdkVersion 15
         targetSdkVersion 26
         versionCode 1
-        versionName version
+        versionName "1.0"
     }
     buildTypes {
         release {
@@ -47,8 +18,13 @@ android {
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
+    implementation 'com.android.support:appcompat-v7:26.1.0'
+    implementation 'com.android.support.constraint:constraint-layout:1.1.0'
+    implementation 'com.android.support:design:26.1.0'
+    implementation 'com.google.code.gson:gson:2.8.2'
+    testImplementation 'junit:junit:4.12'
+    androidTestImplementation 'com.android.support.test:runner:1.0.1'
+    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
+    implementation project(':library')
 }
-
-apply from: 'https://raw.githubusercontent.com/ciceromsjr/JCenter/master/installv1.gradle'
-apply from: 'https://raw.githubusercontent.com/ciceromsjr/JCenter/master/bintrayv1.gradle'
